<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_shuffle"
        android:orderInCategory="100"
        android:title="@string/nav_shuffle"
        android:visible="false"
        android:icon="@drawable/ic_loop_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_continue"
        android:orderInCategory="200"
        android:title="@string/nav_continue"
        android:visible="false"
        android:icon="@drawable/ic_arrow_forward_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_done"
        android:orderInCategory="300"
        android:title="@string/nav_done"
        android:visible="false"
        android:icon="@drawable/ic_done_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_copy"
        android:orderInCategory="400"
        android:title="@string/nav_copy"
        android:visible="false"
        android:icon="@drawable/ic_content_copy_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_delete"
        android:orderInCategory="500"
        android:title="@string/nav_delete"
        android:visible="false"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="ifRoom" />
</menu>
