<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="sstinc.skeem.TaskCreateActivity"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Name -->
    <EditText
        android:id="@+id/field_text_task_name"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/field_text_task_name_hint"/>
    <!-- Subject -->
    <EditText
        android:id="@+id/field_text_task_subject"
        android:inputType="text"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:hint="@string/field_text_subject_name_hint"/>
    <EditText
        android:id="@+id/field_text_description"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="top"
        android:background="@android:color/transparent"
        android:hint="@string/field_text_description_hint" />
</LinearLayout>